2005-10-19  Mark Wielaard  <mark@klomp.org>

	* java/net/URLClassLoader.java (addURLs): Don't call addURL(), but
	call urls.add() and addURLImpl() directly on each URL.

2005-10-19  Andreas Tobler  <a.tobler@schweiz.ch>

	* javax/swing/text/html/HTMLEditorKit.java: Add missing import.

2005-10-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * javax/swing/text/html/HTMLEditorKit.java (getParser): New method.

2005-10-19  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * javax/swing/text/html/parser/ContentModel.java: Fixed comments for
        parameterless constructor.

2005-10-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(getDebugGraphicsOptions): Removed debug output.

2005-10-19  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(isShowing): Fixed condition.
	(show): Only repaint if component is showing.
	(hide): Only repaint if component was showing.

2005-10-19  Mark Wielaard  <mark@klomp.org>

	* javax/security/auth/login/LoginContext.java (lookupModule):
	Load LoginModule through Thread context class loader.

2005-10-19  Mark Wielaard  <mark@klomp.org>

	* java/net/Socket.java (getImpl): Chain exception before throwing.

2005-10-19  Roman Kennke  <kennke@aicas.com>

	* javax/swing/AbstractSpinnerModel.java
	* javax/swing/ActionMap.java
	* javax/swing/BoundedRangeModel.java
	* javax/swing/Box.java
	* javax/swing/BoxLayout.java
	* javax/swing/ButtonGroup.java
	* javax/swing/CellEditor.java
	* javax/swing/CellRendererPane.java
	* javax/swing/ComboBoxEditor.java
	* javax/swing/DefaultButtonModel.java
	* javax/swing/DefaultCellEditor.java
	* javax/swing/DefaultDesktopManager.java
	* javax/swing/DefaultListCellRenderer.java
	* javax/swing/DesktopManager.java
	* javax/swing/ImageIcon.java
	* javax/swing/InputVerifier.java
	* javax/swing/JCheckBoxMenuItem.java
	* javax/swing/JColorChooser.java
	* javax/swing/JDesktopPane.java
	* javax/swing/JFileChooser.java
	* javax/swing/JLayeredPane.java